# EvilGodSim

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  cpp.hint  vcpkg.json
editor/: CMakeLists.txt
editor/src/: main.cpp
editor/src/base/: EditorApplication.cpp  EditorApplication.h
editor/src/base/screens/: EditorScreen.cpp  EditorScreen.h
engine/: CMakeLists.txt
engine/buildconfig/: BuildConfig.cpp.in  BuildConfig.h  CMakeLists.txt
engine/include/: EngineApplication.h
engine/include/enginecore/core/: CoreDefines.h  EngineApplication.h  EngineCoreApplication.h  EnginePaths.h  EnginePaths_p.h  LibrariesDefines.h  Settings.h  Settings_p.h  Time.h
engine/include/enginecore/core/assets/: AssetIdentifier.h  AssetsCoreLoader.h  AssetsLoader.h  AssetsManager.h  AssetsMapper.h  AssetsRegistry.h  Identifier.h
engine/include/enginecore/core/assets/loaders/: AtlasLoader.h  AutoRegisterLoader.h  GLTextureLoader.h  IncludeLoaders.h  ModelsLoader.h  ShaderLoader.h
engine/include/enginecore/core/assets/package/: ResourcePackage.h  ResourcePackageInfo.h
engine/include/enginecore/core/assets/shader/: GLShader.h  ShaderHandler.h
engine/include/enginecore/core/assets/texture/: Atlas.h  GLTexture.h  ImageData.h  Texture.h
engine/include/enginecore/core/chunks/: PositionChunk.h
engine/include/enginecore/core/ecs/components/: Direction.h  ModelComponent.h  PlayerComponent.h  Position.h  Rotation.h  Size.h  Transform.h
engine/include/enginecore/core/ecs/components/physics/: GravityComponent.h  RigidBodyComponent.h  SensorsComponent.h  VelocityComponent.h
engine/include/enginecore/core/ecs/components/transform/: Direction.h  Position.h  Rotation.h  Transform.h
engine/include/enginecore/core/ecs/entities/: Camera.h  Player.h
engine/include/enginecore/core/ecs/systems/: CameraSystem.h  FreeFlySystem.h  RotationSystem.h  SystemsManager.h  ThirdPersonSystem.h  TransformSystem.h
engine/include/enginecore/core/ecs/systems/managment/: EngineSystemFactory.h  SystemCategory.h  SystemsManager.h
engine/include/enginecore/core/events/: EventBus.h
engine/include/enginecore/core/graphics/lods/: LOD.h
engine/include/enginecore/core/graphics/render/: BaseRenderer.h  Batch2D.h  DrawContext.h  EntityRenderer.h  Mesh.h  Model.h  ModelRenderer.h
engine/include/enginecore/core/graphics/ui/: DebugUi.h  Ui.h
engine/include/enginecore/core/lang/: Localization.h
engine/include/enginecore/core/mods/: BaseMod.h  IGameMod.h  ModLoader.h  ModPaths.h  ModPaths_p.h
engine/include/enginecore/core/physics/: Hitbox.h  PhysicsSolver.h  Rigidbody.h
engine/include/enginecore/core/render/: BaseRenderer.h  Mesh.h
engine/include/enginecore/core/screens/: PlaceHolderScreen.h  Screen.h
engine/include/enginecore/core/window/: BaseWindow.h  Input.h  Viewport.h  WindowEvents.h
engine/include/enginecore/interfaces/: IAsset.h  IAssetLoader.h  IBindable.h  IComponent.h  IEntity.h  IEvent.h  IEventsSubscrible.h  IFlushable.h  IGameAsset.h  ILODed.h  IMesh.h  IMetaClass.h  ISystem.h  ISystemFactory.h
engine/include/enginecore/utils/: FPSStats.h  GLUtils.h  ImguiIncludes.h  InputUtils.h  MemoryUtils.h  ObjectsKeeper.h  StringUtils.h  TimeUtils.h  TypeUtils.h
engine/include/enginecore/utils/math/: AABB.h  UVRegion.h
engine/include/enginecore/utils/platform/: CompilerDetection.h  GLDetection.h  ProcessorDetection.h  SystemDetection.h
engine/include/enginecore/utils/threads/: ThreadPool.h
engine/include/enginecore/utils/types/: CoreTypesDefines.h  Delegates.h  EntityDefines.h  EventsDefines.h  FixedPoint.h  GameObject.h  GameObjectsAllocator.h  JsonDefines.h  Setting.h  ThreadPoolDefines.h
engine/libraries/glslcompiler/: CMakeLists.txt
engine/libraries/glslcompiler/src/: GLSLCompiler.cpp
engine/resources/: CMakeLists.txt  shaders_template.h.in  textures_template.h.in
engine/resources/shaders/: camera.vert  main.frag  main.vert  model.frag  model.vert
engine/src/: AssetIdentifier.cpp  AssetsCoreLoader.cpp  AssetsLoader.cpp  AssetsRegistry.cpp  Atlas.cpp  BaseRenderer.cpp  BaseWindow.cpp  Batch2D.cpp  Camera.cpp  CameraSystem.cpp  DebugUi.cpp  DrawContext.cpp  EngineApplication.cpp  EngineCoreApplication.cpp  EnginePaths.cpp  EngineSystemFactory.cpp  FreeFlySystem.cpp  GLShader.cpp  GLTexture.cpp  Identifier.cpp  ImageData.cpp  Input.cpp  InputUtils.cpp  Localization.cpp  Mesh.cpp  ModLoader.cpp  ModelRenderer.cpp  ModelsLoader.cpp  PhysicsSolver.cpp  PlaceHolderScreen.cpp  Rigidbody.cpp  RotationSystem.cpp  StringUtils.cpp  Texture.cpp  ThirdPersonSystem.cpp  TransformSystem.cpp  WindowEvents.cpp
game/: CMakeLists.txt
game/src/: main.cpp
game/src/base/: GameApplication.cpp  GameApplication.h  GameScreen.cpp  GameScreen.h
game/src/base/ecs/systems/: PlayerControllSystem.cpp  PlayerControllSystem.h
game/src/base/renderer/world/: TerrainGenerator.h  WorldRenderer.cpp  WorldRenderer.h
game/src/base/screens/: GameScreen.cpp  GameScreen.h  MenuScreen.cpp  MenuScreen.h
libraries/glslcompiler/include/glslcompiler/: GLSLCompiler.h
tests/: CmakeLists.txt
tests/assets/: TextureTest.cpp
tests/ecs/: SystemsContainerTest.cpp
tests/security/: AssetsLoaderContentTest.cpp  SafetyFeaturesTest.cpp  TranslationTest.cpp
